Replaced deprecated methods
They are deprecated starting in Java 9, which probably won't be updated to any time soon, but it's nice to fix these as they are seen.